force-app/main/default/objects/Post_Sales_Configuration__c/Post_Sales_Configuration__c.object-meta.xml
<CustomObject>
    <label>Post Sales Configuration</label>
    <nameField>
        <displayFormat>PSC-{0000}</displayFormat>
        <label>Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Post Sales Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>