force-app/main/default/objects/Post_Sales_Configuration__c/fields/Amount_Composition_Config__c.field-meta.xml
<CustomField>
    <fullName>Amount_Composition_Config__c</fullName>
    <description>Payment Schedule config: JSON defining how Amount, GST, TDS are calculated. Defines component fields from Booking and calculation mode (separate or inclusive)</description>
    <label>Amount Composition Config</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>