force-app/main/default/objects/Post_Sales_Configuration__c/fields/Approval_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Approval_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approval Configuration</label>
    <referenceTo>Approval_Configuration__c</referenceTo>
    <relationshipLabel>Post Sales Configurations</relationshipLabel>
    <relationshipName>Post_Sales_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>