force-app/main/default/objects/Post_Sales_Configuration__c/fields/Configuration_Type__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Type__c</fullName>
    <label>Configuration Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Demand</fullName>
            </value>
            <value>
                <fullName>Receipt</fullName>
            </value>
            <value>
                <fullName>Credit Note</fullName>
            </value>
            <value>
                <fullName>Debit Note</fullName>
            </value>
            <value>
                <fullName>Advance Payment</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>Payment Schedule</fullName>
            </value>
            <value>
                <fullName>Agreement Execution</fullName>
                <isActive>false</isActive>
                <label>Agreement Execution</label>
            </value>
            <value>
                <fullName>Assignment Agreement</fullName>
                <isActive>false</isActive>
                <label>Assignment Agreement</label>
            </value>
            <value>
                <fullName>Booking</fullName>
                <isActive>false</isActive>
                <label>Booking</label>
            </value>
            <value>
                <fullName>Booking Verification</fullName>
                <isActive>false</isActive>
                <label>Booking Verification</label>
            </value>
            <value>
                <fullName>Complaint Escalation</fullName>
                <isActive>false</isActive>
                <label>Complaint Escalation</label>
            </value>
            <value>
                <fullName>Demand Reminder 1</fullName>
                <isActive>false</isActive>
                <label>Demand Reminder 1</label>
            </value>
            <value>
                <fullName>Demand Reminder 2</fullName>
                <isActive>false</isActive>
                <label>Demand Reminder 2</label>
            </value>
            <value>
                <fullName>Demand Reminder 3</fullName>
                <isActive>false</isActive>
                <label>Demand Reminder 3</label>
            </value>
            <value>
                <fullName>Demand Reminder 4</fullName>
                <isActive>false</isActive>
                <label>Demand Reminder 4</label>
            </value>
            <value>
                <fullName>Handover</fullName>
                <isActive>false</isActive>
                <label>Handover</label>
            </value>
            <value>
                <fullName>Inspection</fullName>
                <isActive>false</isActive>
                <label>Inspection</label>
            </value>
            <value>
                <fullName>Interest Waive Off</fullName>
                <isActive>false</isActive>
                <label>Interest Waive Off</label>
            </value>
            <value>
                <fullName>Key Handover Letter</fullName>
                <isActive>false</isActive>
                <label>Key Handover Letter</label>
            </value>
            <value>
                <fullName>Maintenance Letter</fullName>
                <isActive>false</isActive>
                <label>Maintenance Letter</label>
            </value>
            <value>
                <fullName>Possession Certificate</fullName>
                <isActive>false</isActive>
                <label>Possession Certificate</label>
            </value>
            <value>
                <fullName>Refund</fullName>
                <isActive>false</isActive>
                <label>Refund</label>
            </value>
            <value>
                <fullName>Sale Deed Execution</fullName>
                <isActive>false</isActive>
                <label>Sale Deed Execution</label>
            </value>
            <value>
                <fullName>Snag Escalation</fullName>
                <isActive>false</isActive>
                <label>Snag Escalation</label>
            </value>
            <value>
                <fullName>Swapping</fullName>
                <isActive>false</isActive>
                <label>Swapping</label>
            </value>
            <value>
                <fullName>Termination Mail</fullName>
                <isActive>false</isActive>
                <label>Termination Mail</label>
            </value>
            <value>
                <fullName>Unit Readiness</fullName>
                <isActive>false</isActive>
                <label>Unit Readiness</label>
            </value>
            <value>
                <fullName>Unit Unblocking</fullName>
                <isActive>false</isActive>
                <label>Unit Unblocking</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>