force-app/main/default/objects/Post_Sales_Configuration__c/fields/Demand_Due_Duration__c.field-meta.xml
<CustomField>
    <fullName>Demand_Due_Duration__c</fullName>
    <description>Demand config: Number of days from demand creation date to due date. Same as Due_Date_Offset_Days but specific to demand type config.</description>
    <label>Demand Due Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>