force-app/main/default/objects/Post_Sales_Configuration__c/fields/Demand_Mode__c.field-meta.xml
<CustomField>
    <fullName>Demand_Mode__c</fullName>
    <description>Demand config: Standard uses milestone-based bulk demand, Custom allows selecting individual schedules, Both shows user a choice</description>
    <label>Demand Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>