force-app/main/default/objects/Post_Sales_Configuration__c/fields/Document_Template__c.field-meta.xml
<CustomField>
    <fullName>Document_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Document Template</label>
    <referenceTo>Document_Template__c</referenceTo>
    <relationshipLabel>Post Sales Configurations</relationshipLabel>
    <relationshipName>Post_Sales_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>