force-app/main/default/objects/Post_Sales_Configuration__c/fields/Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Email_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Email Template</label>
    <referenceTo>Email_Template_Config__c</referenceTo>
    <relationshipLabel>Post Sales Configurations (Email)</relationshipLabel>
    <relationshipName>Post_Sales_Configurations_Email</relationshipName>
    <type>Lookup</type>
</CustomField>