force-app/main/default/objects/Post_Sales_Configuration__c/fields/Enable_Reminders__c.field-meta.xml
<CustomField>
    <fullName>Enable_Reminders__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, demand reminders will be sent based on the reminder configuration.</description>
    <label>Enable Demand Reminders</label>
    <type>Checkbox</type>
</CustomField>