force-app/main/default/objects/Post_Sales_Configuration__c/fields/Include_Previous_Dues__c.field-meta.xml
<CustomField>
    <fullName>Include_Previous_Dues__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Previous Dues</label>
    <type>Checkbox</type>
</CustomField>