force-app/main/default/objects/Post_Sales_Configuration__c/fields/Receipt_Amount_Field__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Amount_Field__c</fullName>
    <description>Booking config: API name of the Booking field to use as receipt amount (e.g. Token_Amount__c, Booking_Amount__c)</description>
    <label>Receipt Amount Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>