force-app/main/default/objects/Post_Sales_Configuration__c/fields/Receipt_Creation_Mode__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Creation_Mode__c</fullName>
    <description>Booking config: whether receipt is auto-created on booking creation or manual via Financial Transaction Manager</description>
    <label>Receipt Creation Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>