force-app/main/default/objects/Post_Sales_Configuration__c/fields/Receipt_Field_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Field_Mapping__c</fullName>
    <description>Booking config: JSON array mapping Booking fields to Receipt fields for auto-receipt creation. Format: [{bookingField, receiptField}]</description>
    <label>Receipt Field Mapping</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>