force-app/main/default/objects/Post_Sales_Configuration__c/fields/Reminder_Config__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Config__c</fullName>
    <description>JSON configuration for demand reminders. Stores up to 4 reminder levels with days after due date, against object, document template, and N/A status.</description>
    <label>Reminder Configuration</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>