force-app/main/default/objects/Post_Sales_Configuration__c/fields/Schedule_Edit_Mode__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Edit_Mode__c</fullName>
    <description>Payment Schedule config: Standard means auto-generated only, Custom allows editing amounts/percentages post-booking via Payment Schedule Editor</description>
    <label>Schedule Edit Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>