force-app/main/default/objects/Post_Sales_Configuration__c/fields/Schedule_Mode__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Mode__c</fullName>
    <label>Schedule Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>