force-app/main/default/objects/Post_Sales_Configuration__c/fields/Schedule_Source__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Source__c</fullName>
    <description>Payment Schedule config: source for creating payment schedules - from Master Payment Schedule or Cost Sheet Line Items</description>
    <label>Schedule Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Master Payment Schedule</fullName>
            </value>
            <value>
                <fullName>Cost Sheet Line</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>