force-app/main/default/objects/Post_Sales_Configuration__c/fields/VF_Page_Name__c.field-meta.xml
<CustomField>
    <fullName>VF_Page_Name__c</fullName>
    <label>Visualforce Page Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>